--- a/template_nodejs/package.json
+++ b/template_nodejs/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/carloscaceres2093/template_nodejs.git"
+    "url": "git+ssh://git@github.com/jlmc-git/TodosALaUModulo6.git"
   },
   "keywords": [
     "node",
@@ -17,12 +17,12 @@
     "end",
     "api"
   ],
-  "author": "Carlos Cáceres",
+  "author": "Luis Moreno",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/carloscaceres2093/template_nodejs/issues"
+    "url": "https://github.com/jlmc-git/TodosALaUModulo6/issues"
   },
-  "homepage": "https://github.com/carloscaceres2093/template_nodejs#readme",
+  "homepage": "https://github.com/jlmc-git/TodosALaUModulo6#readme",
   "dependencies": {
     "@types/express": "^4.17.17",
     "express": "^4.18.2",
@@ -37,11 +37,11 @@
     "@types/jest": "^29.5.2",
     "chai-http": "^4.4.0",
     "chai-spies": "^1.0.0",
-    "dotenv": "^16.1.4",
+    "dotenv": "^16.3.1",
     "jest": "^29.5.0",
-    "knex": "^2.4.2",
+    "knex": "^2.5.1",
     "knex-cli": "^1.0.2",
-    "pg": "^8.11.0",
+    "pg": "^8.11.1",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1"
   }
